; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_wfdirrd.c_WFRegGetValueW.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_wfdirrd.c_WFRegGetValueW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @WFRegGetValueW(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @RegOpenKey(i32 %15, i32 %16, i32* %14)
  store i32 %17, i32* %13, align 4
  %18 = load i32, i32* @ERROR_SUCCESS, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %29

20:                                               ; preds = %6
  %21 = load i32, i32* %14, align 4
  %22 = load i32, i32* %9, align 4
  %23 = load i32, i32* %10, align 4
  %24 = load i32, i32* %11, align 4
  %25 = load i32, i32* %12, align 4
  %26 = call i32 @RegQueryValueEx(i32 %21, i32 %22, i32* null, i32 %23, i32 %24, i32 %25)
  store i32 %26, i32* %13, align 4
  %27 = load i32, i32* %14, align 4
  %28 = call i32 @RegCloseKey(i32 %27)
  br label %29

29:                                               ; preds = %20, %6
  %30 = load i32, i32* %13, align 4
  ret i32 %30
}

declare dso_local i32 @RegOpenKey(i32, i32, i32*) #1

declare dso_local i32 @RegQueryValueEx(i32, i32, i32*, i32, i32, i32) #1

declare dso_local i32 @RegCloseKey(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
